Refactor CORS configuration and implement history management features. Removed CorsConfig class, updated SecurityConfig to allow any localhost port, and added HistoryController, HistoryService, and their implementations for sales and purchase history retrieval. Introduced DateRangeRequest DTO for date range input and updated SellItem entity to ignore sell reference during serialization.